--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,20 @@
-# Google Service Account (JSON string)
-GOOGLE_SERVICE_ACCOUNT_KEY='{"type":"service_account","project_id":"...","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}'
+# SheetOps Environment Configuration
+# Copy this file to .env.local and fill in your values
 
-# Composio API Key
-COMPOSIO_API_KEY=your_composio_api_key
+# ============================================
+# COMPOSIO - Google Sheets OAuth Integration
+# Get your API key from: https://app.composio.dev
+# ============================================
+COMPOSIO_API_KEY=your_composio_api_key_here
 
-# Toolhouse API Key (optional)
-TOOLHOUSE_API_KEY=your_toolhouse_api_key
+# ============================================
+# TOOLHOUSE - AI Agent Backend
+# Get your API key from: https://toolhouse.ai
+# ============================================
+TOOLHOUSE_API_KEY=your_toolhouse_api_key_here
+
+# ============================================
+# GOOGLE SERVICE ACCOUNT (Optional)
+# For service account mode - paste entire JSON
+# ============================================
+GOOGLE_SERVICE_ACCOUNT_KEY='{"type":"service_account","project_id":"...","private_key":"...","client_email":"..."}'
